<resources>
    <string name="app_name">WorkSchedule</string>
    <string name="action_settings">Settings</string>

    <string name="schedule_day">Day</string>
    <string name="schedule_time">Time</string>
    <string name="schedule_location">Location</string>

    <string name="schedule_employee_title">Employee</string>
    <string name="employee_prompt">Choose an Employee</string>
    <string name="employee_date">Date</string>
    <string name="submit_button">Submit</string>

    <string name="addScheduleActivity">Add Schedule</string>

    <string name="parse_app_id">AJcQZVRKUfZqdf4LBlM6mImWnlQ3XPvn5GfJzywW</string>
    <string name="parse_client_key">hP39TIJy04Srw0i3hRg0YKOWEJzWDpykBvAY53eA</string>

    <string name="signup_name">username</string>
    <string name="signup_email">email</string>
    <string name="signup_password">password</string>
    <string name="signup_button">submit</string>
    <string name="supervisor">Supervisor/Manager</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="logInSubmitButton">Submit</string>
    <string name="signupLink">click here to sign up</string>

</resources>
