<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/logInEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/logInPassword"
        android:layout_below="@+id/logInEmail"
        android:layout_alignLeft="@+id/logInEmail"
        android:layout_alignStart="@+id/logInEmail"
        android:layout_marginTop="54dp"
        android:text="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginSubmitButton"
        android:text="@string/logInSubmitButton"
        android:layout_below="@+id/logInPassword"
        android:layout_alignRight="@+id/logInPassword"
        android:layout_alignEnd="@+id/logInPassword"
        android:layout_marginTop="77dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signupLink"
        android:id="@+id/signupLink"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="#0a12f2"
        android:textColor="#f7f1f1" />

</RelativeLayout>
